added my favs and fixed AND SQL bug

--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.csproj
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.csproj
@@ -28,6 +28,9 @@
     <EmbeddedResource Update="CoinList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="MyFavs.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Portfolio.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
