added inheritance for inotifypropertychanged and more db code

--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.csproj
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.csproj
@@ -34,6 +34,9 @@
     <EmbeddedResource Update="Portfolio.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Search.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Settings.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
