--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.iOS/com.gordoncm.SensorsBox.iOS.csproj
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.iOS/com.gordoncm.SensorsBox.iOS.csproj
@@ -123,6 +123,24 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BigMath">
+      <Version>0.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.ClearScript.V8">
+      <Version>7.4.5</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CSharp">
+      <Version>4.7.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="RestSharp">
+      <Version>110.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.ComponentModel.TypeConverter">
+      <Version>4.3.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
