--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.csproj
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.csproj
@@ -12,8 +12,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BigMath" Version="0.5.0" />
+    <PackageReference Include="Microsoft.ClearScript.V8" Version="7.4.5" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2662" />
     <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
 	<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
