--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.csproj
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.csproj
@@ -30,6 +30,9 @@
     <EmbeddedResource Update="AppShell.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="CoinDetail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="CoinList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
