--- a/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.Android/com.gordoncm.SensorsBox.Android.csproj
+++ b/com.gordoncm.SensorsBox/com.gordoncm.SensorsBox.Android/com.gordoncm.SensorsBox.Android.csproj
@@ -117,4 +117,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadGenericExceptionInfoBarcomgordoncmSensorsBoxAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
